--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.3.*",
-        "propel/propel": "~2.0@dev"
+        "phpunit/phpunit": "5.6.*",
+        "phpunit/dbunit": ">=1.2"
     },
     "autoload": {
         "psr-0": {
